--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top Down Shooter</title>
+    <title>Asteroids+</title>
   </head>
   <body>
+    
     
     <main>
       <canvas id="gameCanvas"></canvas>
