feat: miscelaneous additions, beginning work on shooting ai

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!doctype html>
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* Disable scrollbars and prevent scrolling */
+}
+</style>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
